Adding Textcreation and changing JSON-Files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/three/examples/js/controls/PointerLockControls.js"></script>
+    <script src="node_modules/three/examples/js/loaders/FontLoader.js"></script>
+    <script src="node_modules/three/examples/js/geometries/TextGeometry.js"></script>
     
     <title>Interactive Guidelines for Thematic Map Choice</title>
   </head>
