--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@
     
     <title>Interactive Guidelines for Thematic Map Choice</title>
   </head>
-  <body>
+  <body id="body">
     <div id="selectDecisionTree">
-      <input class="form-check-input" type="radio" id="straight" name="positioning" value="straight" checked>
-      <label class="form-check-label" for="straight">Straight</label>
-      <input class="form-check-input" type="radio" id="circular" name="positioning" value="circular">
-      <label class="form-check-label" for="circular">Circular</label>
-      <input class="form-check-input" type="radio" id="sphere" name="object" value="sphere" checked>
-      <label class="form-check-label" for="straight">Sphere</label>
-      <input class="form-check-input" type="radio" id="box" name="object" value="box">
-      <label class="form-check-label" for="circular">Box</label>
-      <button type ="button" class="btn btn-primary" id="example1Button">Erstes Beispiel</button>
-      <button type ="button" class="btn btn-primary" id="example2Button">Zweites Beispiel</button>
+      <button type ="button" class="btn btn-primary" id="example1Button">First Example</button>
+      <button type ="button" class="btn btn-primary" id="example2Button">Second Example</button>
     </div>
-    <div id="selectionArea">
+    <div id="selectionArea" class="col-4">
       <form id="selectionForm"></form>
+      <button type ="button" class="btn btn-light" id="lockButton">Start Mouse Controls</button>
     </div>
-    <button type ="button" class="btn btn-light" id="lockButton">Steuerung starten</button>
+    <div id="descriptionArea" class="col-4"></div>
+    <div id="descriptionButtonArea">
+      <button type ="button" class="btn btn-primary" id="descriptionButton">Show description</button>
+    </div>
     <div id="scene"></div>
     <script type="module" src="/main.js"></script>
   </body>
