and the next one

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href= "/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href= "css/style.css" rel="stylesheet">
-    <script src="node_modules/three/build/three.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="node_modules/three/examples/js/controls/PointerLockControls.js"></script>
-    <script src="node_modules/three/examples/js/loaders/FontLoader.js"></script>
-    <script src="node_modules/three/examples/js/geometries/TextGeometry.js"></script>
+    <link href= "/css/style.css" rel="stylesheet">
+    <script src="/node_modules/three/build/three.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/node_modules/three/examples/js/controls/PointerLockControls.js"></script>
+    <script src="/node_modules/three/examples/js/loaders/FontLoader.js"></script>
+    <script src="/node_modules/three/examples/js/geometries/TextGeometry.js"></script>
     
     <title>Interactive Guidelines for Thematic Map Choice</title>
   </head>
