--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href= "/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href= "/css/style.css" rel="stylesheet">
-    <script src="/node_modules/three/build/three.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/node_modules/three/examples/js/controls/PointerLockControls.js"></script>
-    <script src="/node_modules/three/examples/js/loaders/FontLoader.js"></script>
-    <script src="/node_modules/three/examples/js/geometries/TextGeometry.js"></script>
+    <script src="https://unpkg.com/three@0.138.3/build/three.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/three@0.138.3/examples/js/controls/PointerLockControls.js"></script>
+    <script src="https://unpkg.com/three@0.138.3/examples/js/loaders/FontLoader.js"></script>
+    <script src="https://unpkg.com/three@0.138.3/examples/js/geometries/TextGeometry.js"></script>
     
     <title>Interactive Guidelines for Thematic Map Choice</title>
   </head>
