--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.eps" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href= "/css/style.css" rel="stylesheet">
@@ -15,6 +15,10 @@
     <title>Interactive Guidelines for Thematic Map Choice</title>
   </head>
   <body id="body">
+    <div id="chooseType">
+      <button type="button" class="btn btn-primary" onclick="document.getElementById('chooseType').style.display='none';">Interactive</button>
+      <button type="button" class="btn btn-primary" onclick="window.location.href = '/text.html';">Traditional</button>      
+    </div>
     <div id="selectDecisionTree">
       <button type ="button" class="btn btn-primary" id="example1Button">First Example</button>
       <button type ="button" class="btn btn-primary" id="example2Button">Second Example</button>
