Change place of second page for user study

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   </head>
   <body id="body">
     <div id="chooseType">
-      <button type="button" class="btn btn-primary" onclick="document.getElementById('chooseType').style.display='none';">Interactive</button>
-      <button type="button" class="btn btn-primary" onclick="window.location.href = '/text.html';">Traditional</button>      
+      <div class="center">
+        <button type="button" class="btn btn-primary" onclick="document.getElementById('chooseType').style.display='none';">Interactive</button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href = '/text.html';">Traditional</button>
+      </div>      
     </div>
     <div id="selectDecisionTree">
       <button type ="button" class="btn btn-primary" id="example1Button">First Example</button>
