final final changes before user study

--- a/public/text.html
+++ b/public/text.html
@@ -14,11 +14,11 @@
     <div id="selectExampleText">
       <button type ="button" class="btn btn-primary" id="exampleText1Button">First Example</button>
       <button type ="button" class="btn btn-primary" id="exampleText2Button">Second Example</button>
-
     </div>
     <div id="textArea">
         <div id="example1Text">
           <div>
+            <h2>Adaptive Maps Algorithm</h2>
             <img src="img/adaptive-maps-algorithm.png">
           </div>
           <div class="row">
@@ -69,6 +69,7 @@
         </div>
         <div id="example2Text">
           <div class="col">
+          <h2>Common Thematic Map Types</h2>
           <img src="img/common-thematic-map-types.png">
           </div>
           <div class="col">
@@ -79,7 +80,7 @@
             <h4>Proportional Symbol Map</h4>
             <p>A proportional symbol map uses the visual variable size to scale point symbols by their attribute value. Proportional symbol maps evoke a discrete and abrupt metaphor, suggesting economic sites of production and distribution like mines, factories, offices, and stores.</p>
             <h4>Isoline Map</h4>
-            <p>An isoline map interpolates between sampled attribute values, using the visuale variable location to represent the interpolated attribute gradient as a new geospatial data layer. Isoline maps evoke a continous and smooth metaphor, suggesting environmental or geophysical phenomena.</p>
+            <p>An isoline map interpolates between sampled attribute values, using the visual variable location to represent the interpolated attribute gradient as a new geospatial data layer. Isoline maps evoke a continous and smooth metaphor, suggesting environmental or geophysical phenomena.</p>
             <h4>Dot Density Map</h4>
             <p>A dot density map uses the composite visual variable numerousness (arrangement combined with size) to adjust the density in dots placed within enumeration units by their attribute values. Dot density maps evoke a discrete and smooth metaphor, suggesting the individual bodies of human and social phenomena.</p>
           </div>
