Added sources and changed names from Example 1/2 to name of decision tree

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   </head>
   <body id="body">
     <div id="chooseType">
-      <div class="center">
+      <div>
         <button type="button" class="btn btn-primary" onclick="document.getElementById('chooseType').style.display='none';">Interactive</button>
         <button type="button" class="btn btn-primary" onclick="window.location.href = '/text.html';">Traditional</button>
       </div>      
     </div>
     <div id="selectDecisionTree">
-      <button type ="button" class="btn btn-primary" id="example1Button">First Example</button>
-      <button type ="button" class="btn btn-primary" id="example2Button">Second Example</button>
+      <button type ="button" class="btn btn-primary" id="example1Button">Adaptive Maps Algorithm</button>
+      <button type ="button" class="btn btn-primary" id="example2Button">Common Thematic Map Types</button>
     </div>
     <div id="selectionArea" class="col-4">
       <form id="selectionForm"></form>
