--- a/public/text.html
+++ b/public/text.html
@@ -12,8 +12,8 @@
   </head>
   <body id="body">
     <div id="selectExampleText">
-      <button type ="button" class="btn btn-primary" id="exampleText1Button">First Example</button>
-      <button type ="button" class="btn btn-primary" id="exampleText2Button">Second Example</button>
+      <button type ="button" class="btn btn-primary" id="exampleText1Button">Adaptive Maps Algorithm</button>
+      <button type ="button" class="btn btn-primary" id="exampleText2Button">Common Thematic Map Types</button>
     </div>
     <div id="textArea">
         <div id="example1Text">
@@ -66,6 +66,9 @@
               <p>map where locations are shaded in proportion to the value of the attribute at a location</p>
             </div>
           </div>
+          <div>
+            <p>Source: "Data Scale as cartography: a semi-automatic approach for thematic web map creation" by Degbelo, Sarfaz, and Kray, published in 2020</p>
+          </div>
         </div>
         <div id="example2Text">
           <div class="col">
@@ -83,6 +86,9 @@
             <p>An isoline map interpolates between sampled attribute values, using the visual variable location to represent the interpolated attribute gradient as a new geospatial data layer. Isoline maps evoke a continous and smooth metaphor, suggesting environmental or geophysical phenomena.</p>
             <h4>Dot Density Map</h4>
             <p>A dot density map uses the composite visual variable numerousness (arrangement combined with size) to adjust the density in dots placed within enumeration units by their attribute values. Dot density maps evoke a discrete and smooth metaphor, suggesting the individual bodies of human and social phenomena.</p>
+          </div>
+          <div>
+            <p>Source: "Mapping for a Sustainable World" by Kraak, Roth, Ricker, Kagawa, and Le Sourd, published in 2020</p>
           </div>
         </div>
     </div>
