changed button description and position

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
       <button type ="button" class="btn btn-primary" id="example1Button">Adaptive Maps Algorithm</button>
       <button type ="button" class="btn btn-primary" id="example2Button">Common Thematic Map Types</button>
     </div>
+    <div>
     <div id="selectionArea" class="col-4">
       <form id="selectionForm"></form>
-      <button type ="button" class="btn btn-light" id="lockButton">Start Mouse Controls</button>
+    </div>
+    <button type ="button" class="btn btn-light" id="lockButton">Click to start navigation</button>
     </div>
     <div id="descriptionArea" class="col-4"></div>
     <div id="descriptionButtonArea">
