--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href= "/css/style.css" rel="stylesheet">
@@ -11,18 +10,29 @@
     <script src="https://unpkg.com/three@0.138.3/examples/js/controls/PointerLockControls.js"></script>
     <script src="https://unpkg.com/three@0.138.3/examples/js/loaders/FontLoader.js"></script>
     <script src="https://unpkg.com/three@0.138.3/examples/js/geometries/TextGeometry.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ajv/8.1.0/ajv7.bundle.js" integrity="sha512-PuzkO+wOBh6m/Jux4nXgl2ItRzed77lFDidDX500DUNlvuzr4OrXtsFhN4q0CCxPoXjTFfiw1z4FmED9J/MMdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <title>Interactive Guidelines for Thematic Map Choice</title>
   </head>
   <body id="body">
     <div id="selectDecisionTree">
-      <button type ="button" class="btn btn-primary" id="example1Button">First Example</button>
-      <button type ="button" class="btn btn-primary" id="example2Button">Second Example</button>
+      <div id="selectionButtons">
+        <h4>Choose one of the examples</h4>
+        <button type ="button" class="btn btn-primary" id="example1Button">Adaptive Maps Algorithm</button>
+        <button type ="button" class="btn btn-primary" id="example2Button">Common Thematic Map Types</button>
+      </div>
+      <div id="uploadArea">
+        <h4>Or upload your own decision tree</h4>
+        <form class="form" id="decisionTreeForm">
+          <input class="form-control" type="file" id="decisionTreeUpload" accept=".json">
+          <a href="json-examples.zip" download>Download Schema and Examples</a>
+        </form>
+      </div>
     </div>
     <div id="selectionArea" class="col-4">
       <form id="selectionForm"></form>
-      <button type ="button" class="btn btn-light" id="lockButton">Start Mouse Controls</button>
     </div>
+    <button type ="button" class="btn btn-light" id="lockButton">Click to start navigation</button>
     <div id="descriptionArea" class="col-4"></div>
     <div id="descriptionButtonArea">
       <button type ="button" class="btn btn-primary" id="descriptionButton">Show description</button>
